# gedi-calval-copc

./: .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: continuous-integration.yml  release.yml
docker/: Dockerfile
examples/: collection.json
examples/usa_neonsrer_2019_NEON_D14_SRER_DP1_L090-1_2019091314_unclassified_point_cloud_0000003/: usa_neonsrer_2019_NEON_D14_SRER_DP1_L090-1_2019091314_unclassified_point_cloud_0000003.json
scripts/: update-examples
src/stactools/gedi_calval_copc/: commands.py  constants.py  metadata.py  stac.py
tests/: test_commands.py  test_stac.py
